syntax = "proto3";

package broker.mcp;

option go_package = "github.com/metorial/metorial/mcp-broker/gen/mcp-broker/mcp;mcp";

message McpError {
  enum McpErrorCode {
    failed_to_start = 0;
    failed_to_stop = 1;
    invalid_mcp_message = 2;
    unknown_error = 3;
  }

  string error_message = 1;
  McpErrorCode error_code = 2;
  map<string, string> metadata = 3; // Optional, Additional metadata for the error
}

message McpOutput {
  enum McpOutputType {
    stdout = 0;
    stderr = 1;
  }
  
  McpOutputType output_type = 1;
  repeated string lines = 2;
}

message McpMessageRaw {
  string message = 1; 
}

message McpMessage {
  enum McpMessageType {
    request = 0;
    response = 1;  
    notification = 2;
    error = 3;
    unknown = 4;
  }

  McpMessageRaw mcp_message = 1;
  McpMessageType message_type = 2;
}
